--- a/assets/css/machine.css
+++ b/assets/css/machine.css
@@ -16,3 +16,19 @@ img{
     margin:180px 100px;
 }
 
+table{
+    border: 3px solid #4b6a75;
+}
+
+th,td {
+    border: 1px solid #4b6a75;
+    padding: 8px 10px;
+}
+
+.avantage{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 50px;
+    text-align: center;
+}
