--- a/assets/css/installationVM.css
+++ b/assets/css/installationVM.css
@@ -1,5 +1,5 @@
 .image h2 {
-    margin: 50px 60px 0 60px;
+    margin: 70px 60px 0 60px;
     padding: 15px 340px;
     background-color: rgba(39, 37, 37, 0.64);
 }
@@ -10,7 +10,7 @@
 
     display: flex;
     align-items: center;
-    text-align: center;
+    text-align: start;
 }
 
 .oracle img {
