--- a/assets/css/installationVM.css
+++ b/assets/css/installationVM.css
@@ -29,3 +29,25 @@
     height: auto;
     padding: 30px 30px 0 0;
 }
+
+
+
+@media (max-width: 1024px) {
+
+    .image h2 {
+        margin: 50px 20px;
+        padding: 10px 250px;
+        font-size: 16px;
+    }
+
+    .oracle, .etapes {
+        flex-direction: column;
+        align-items: center;
+        padding: 0 20px;
+    }
+
+    .oracle img, .etapes img {
+        width: 80%;
+        padding: 20px;
+    }
+}
