--- a/assets/css/machine.css
+++ b/assets/css/machine.css
@@ -32,3 +32,20 @@ th,td {
     padding: 50px;
     text-align: center;
 }
+
+
+@media (max-width: 1024px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .text {
+        margin: 20px;
+        text-align: center;
+    }
+
+    .image {
+        margin: 10px;
+    }
+}
