--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,9 @@ html{
 }
 
 nav {
-  position: fixed; /* La navigation est fixée à un endroit précis */
-  top: 0;          /* Collée en haut de la page */
-  width: 100%;     /* Prend toute la largeur de la page */
+  position: fixed;
+  top: 0;
+  width: 100%;
   z-index: 4;
 }
 
@@ -77,4 +77,41 @@ footer{
   text-align: center;
   padding-top:25px;
   padding-bottom:10px;
+}
+
+
+
+
+@media (max-width: 768px) {
+  .main-nav {
+    flex-direction: column;
+    padding: 10px;
+    align-items: center;
+  }
+
+  .main-nav a {
+    margin: 5px 0;
+  }
+
+  #img-nav {
+    width: 25px;
+    max-height: 30px;
+  }
+
+  .diff {
+    padding: 30px;
+  }
+
+  table {
+    margin-top: 20px;
+    width: 100%;
+  }
+
+  th, td {
+    padding: 8px;
+  }
+
+  .carousel-caption.d-none.d-md-block {
+    font-size: 14px;
+  }
 }
